@startuml MonGe_ClassDiagram_Associacoes

!define ENTITY class
!define SERVICE class
!define ENUM enum

' === CLASSES PRINCIPAIS ===

ENTITY Usuario {
  -id: Long
  -nome: String
  -email: String
  -login: String
  -perfil: PerfilUsuario
  -ativo: Boolean
  -dataCriacao: LocalDateTime
  -dataUltimoAcesso: LocalDateTime
  {static} autenticar(email, senha): Usuario
  +atualizarUltimoAcesso(): void
}

ENTITY Bolsista {
  -id: Long
  -matricula: String
  -cpf: String
  -telefone: String
  -endereco: String
  -cargaHorariaSemanal: Integer
  -dataInicioVinculo: LocalDate
  -dataFimVinculo: LocalDate
  -statusBolsa: StatusBolsa
  +registrarLancamento(): LancamentoSemanal
  +consultarHistorico(): List<LancamentoSemanal>
  +calcularHorasRealizadas(): Integer
}

ENTITY Orientador {
  -id: Long
  -siape: String
  -departamento: String
  -titulacao: String
  -telefoneContato: String
  +avaliarLancamento(LancamentoSemanal): void
  +inserirFeedback(String): void
  +aprovarLancamento(Long): Boolean
  +solicitarEdicao(Long, String): void
  +consultarBolsistas(): List<Bolsista>
}

ENTITY ProjetoAcademico {
  -id: Long
  -codigo: String
  -titulo: String
  -descricao: String
  -dataInicio: LocalDate
  -dataFim: LocalDate
  -orcamento: BigDecimal
  -statusProjeto: StatusProjeto
  -unidadeVinculada: String
  -programaFomento: String
  +adicionarBolsista(Bolsista): void
  +removerBolsista(Long): void
  +gerarRelatorioProjeto(): RelatorioConsolidado
  +calcularPercentualExecucao(): Double
}

ENTITY LancamentoSemanal {
  -id: Long
  -semanaReferencia: LocalDate
  -dataLancamento: LocalDateTime
  -atividadesRealizadas: String
  -horasRealizadas: Integer
  -observacoes: String
  -justificativaFalta: String
  -statusLancamento: StatusLancamento
  -dataAprovacao: LocalDateTime
  -feedbackOrientador: String
  +submeter(): void
  +editar(): Boolean
  +aprovar(): void
  +rejeitarComMotivo(String): void
  +calcularFrequencia(): Double
}

ENTITY Notificacao {
  -id: Long
  -destinatario: Usuario
  -tipoNotificacao: TipoNotificacao
  -titulo: String
  -mensagem: String
  -dataEnvio: LocalDateTime
  -lida: Boolean
  -url: String
  +marcarComoLida(): void
  +enviar(): Boolean
}

ENTITY RelatorioConsolidado {
  -id: Long
  -tipoRelatorio: TipoRelatorio
  -dataGeracao: LocalDateTime
  -parametros: String
  -formato: FormatoExportacao
  -caminhoArquivo: String
  -tamanhoArquivo: Long
  +gerar(): Boolean
  +exportar(FormatoExportacao): String
  +compartilhar(List<Usuario>): void
}

' === ENUMS ===

ENUM PerfilUsuario {
  BOLSISTA
  ORIENTADOR
  COORDENADOR
  TECNICO_ADMINISTRATIVO
  ADMINISTRADOR
}

ENUM StatusBolsa {
  ATIVA
  SUSPENSA
  FINALIZADA
  CANCELADA
}

ENUM StatusProjeto {
  PLANEJAMENTO
  EM_EXECUCAO
  SUSPENSO
  FINALIZADO
  CANCELADO
}

ENUM StatusLancamento {
  RASCUNHO
  SUBMETIDO
  EM_AVALIACAO
  APROVADO
  REJEITADO
  SOLICITA_EDICAO
}

ENUM TipoNotificacao {
  LANCAMENTO_PENDENTE
  APROVACAO_CONCEDIDA
  SOLICITACAO_EDICAO
  PRAZO_VENCIMENTO
  FEEDBACK_RECEBIDO
}

ENUM TipoRelatorio {
  INDIVIDUAL_BOLSISTA
  CONSOLIDADO_PROJETO
  GERENCIAL_SETOR
  FREQUENCIA_MENSAL
}

ENUM FormatoExportacao {
  PDF
  CSV
  XLSX
  JSON
}

' === RELACIONAMENTOS ENTRE CLASSES ===

Usuario ||--|| Bolsista : "herda"
Usuario ||--|| Orientador : "herda"

Bolsista }o--|| ProjetoAcademico : "vinculadoA"
Orientador ||--o{ Bolsista : "supervisiona"
Orientador ||--o{ ProjetoAcademico : "pertence"

Bolsista ||--o{ LancamentoSemanal : "cria"
LancamentoSemanal }o--|| ProjetoAcademico : "refereProjeto"
Orientador ||--o{ LancamentoSemanal : "avalia"

Usuario ||--o{ Notificacao : "recebe"
LancamentoSemanal ||--o{ Notificacao : "gera"

Usuario ||--o{ RelatorioConsolidado : "solicita"
ProjetoAcademico ||--o{ RelatorioConsolidado : "geraRelatorio"

' === ASSOCIAÇÕES ENUM-CLASSE ===

Usuario --> PerfilUsuario : "possui"
Bolsista --> StatusBolsa : "tem"
ProjetoAcademico --> StatusProjeto : "apresenta"
LancamentoSemanal --> StatusLancamento : "possui"
Notificacao --> TipoNotificacao : "classifica"
RelatorioConsolidado --> TipoRelatorio : "define"
RelatorioConsolidado --> FormatoExportacao : "usa"

' === NOTAS E OBSERVAÇÕES ===

note top of Usuario : Classe base para autenticação\nintegrada ao Portal UFPR

note right of LancamentoSemanal : Entidade central do sistema\ncom workflow de aprovação

note bottom of ProjetoAcademico : Contexto das atividades\ncom gestão de bolsistas

note left of PerfilUsuario : Enum para controle\nde acesso baseado em roles

@enduml
